--- a/src/main/java/me/kondi/sockets/ConnectionX.form
+++ b/src/main/java/me/kondi/sockets/ConnectionX.form
@@ -2,64 +2,87 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="me.kondi.sockets.ConnectionX">
   <grid id="cbd77" binding="contentPane" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="299" y="24" width="324" height="309"/>
+      <xy x="284" y="24" width="1200" height="700"/>
     </constraints>
     <properties>
       <alignmentX value="0.5"/>
       <alignmentY value="0.5"/>
       <autoscrolls value="false"/>
       <enabled value="true"/>
-      <preferredSize width="270" height="360"/>
+      <minimumSize width="1200" height="700"/>
+      <preferredSize width="1200" height="700"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="e3588" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e3588" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
-        <properties/>
+        <properties>
+          <enabled value="true"/>
+          <minimumSize width="600" height="700"/>
+          <preferredSize width="600" height="700"/>
+        </properties>
         <border type="none"/>
         <children>
-          <component id="d00f7" class="javax.swing.JTextField" binding="loginField">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="16ac7" class="javax.swing.JTextField" binding="passwordField">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="a078" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="2" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="200" height="-1"/>
+              </grid>
             </constraints>
             <properties>
+              <font name="Roboto Light" size="48"/>
               <text value="Login"/>
             </properties>
           </component>
-          <component id="c337e" class="javax.swing.JLabel">
+          <component id="51efe" class="javax.swing.JButton" default-binding="true">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="275" height="75"/>
+              </grid>
             </constraints>
             <properties>
-              <text value="Password"/>
+              <background color="-12567239"/>
+              <borderPainted value="false"/>
+              <font name="Roboto Light" size="36"/>
+              <foreground color="-1"/>
+              <hideActionText value="false"/>
+              <text value="Log In"/>
+            </properties>
+          </component>
+          <component id="5881e" class="javax.swing.JButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="275" height="75"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12567239"/>
+              <borderPainted value="false"/>
+              <font name="Roboto Light" size="36"/>
+              <foreground color="-1"/>
+              <hideActionText value="false"/>
+              <text value="Register"/>
+            </properties>
+          </component>
+          <component id="d00f7" class="javax.swing.JTextField" binding="loginField">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="200" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <selectionColor color="-12567239"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="1ebc8" class="javax.swing.JCheckBox" binding="rememberMeCheckBox" default-binding="true">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="146" height="21"/>
+              <grid row="6" column="0" row-span="2" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="180" height="21"/>
               </grid>
             </constraints>
             <properties>
@@ -68,15 +91,71 @@
           </component>
           <component id="14e1b" class="javax.swing.JButton" binding="clientButton" default-binding="true">
             <constraints>
-              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="61" height="30"/>
               </grid>
             </constraints>
             <properties>
+              <background color="-12567239"/>
               <borderPainted value="false"/>
               <foreground color="-1"/>
               <hideActionText value="false"/>
               <text value="Connect"/>
+            </properties>
+          </component>
+          <component id="c337e" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="3" column="0" row-span="3" col-span="2" vsize-policy="0" hsize-policy="1" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="200" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font name="Roboto Light" size="48"/>
+              <text value="Password"/>
+            </properties>
+          </component>
+          <component id="16ac7" class="javax.swing.JTextField" binding="passwordField">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="200" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <selectionColor color="-12567239"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="10cb" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <background color="-1"/>
+          <minimumSize width="600" height="700"/>
+          <preferredSize width="600" height="700"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="18816" class="javax.swing.JLabel" binding="connectionButton">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="600" height="700"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12567239"/>
+              <enabled value="true"/>
+              <focusTraversalPolicyProvider value="false"/>
+              <focusable value="true"/>
+              <font name="Roboto Light" size="72" style="1"/>
+              <foreground color="-1"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="11"/>
+              <opaque value="true"/>
+              <text value="ConnectionX"/>
             </properties>
           </component>
         </children>
